--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+form label {
+  text-transform: uppercase; 
+  color: gray; 
+  
+}
+
+form input{
+    font-weight: 500;
+}
+form.submitted input.ng-invalid{
+  border-color: red;
+}
